Update development commands to work with Java 8